[gd_scene load_steps=2 format=3 uid="uid://b8j8x3l5k2a8a"]

[ext_resource type="Script" path="res://Script/UI/TaskHintUI.gd" id="1_2p3q4"]

[node name="TaskHintUI" type="CanvasLayer"]
script = ExtResource("1_2p3q4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HintLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "任务提示"
horizontal_alignment = 1

[node name="TaskListContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="TaskItem" type="Label" parent="MarginContainer/VBoxContainer/TaskListContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "任务项"
horizontal_alignment = 0